--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.NFCSample"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".view.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.nfcsample.NfcReaderActivity"
+        <activity android:name="com.example.nfcsample.view.nfcReader.NfcReaderActivity"
             android:exported="true">
 <!--            <intent-filter>-->
 <!--                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>-->
@@ -33,7 +33,7 @@
 <!--                <data android:mimeType="text/plain" />-->
 <!--            </intent-filter>-->
         </activity>
-        <activity android:name="com.example.nfcsample.NfcWriterActivity">
+        <activity android:name="com.example.nfcsample.view.NfcWriterActivity">
 
         </activity>
     </application>
